syntax = "proto3";

package daprexamples;

option java_outer_classname = "DaprExamplesProtos";
option java_package = "io.dapr.examples";

// User Code definitions
service HelloWorld {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}